// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVToggleButton > renders correctly 1`] = `
<v-btn-toggle-stub
  border="false"
  class="ml-auto rounded button-toggle bg-quaternary-dark"
  color="primary"
  data-v-0938e747=""
  density="compact"
  direction="horizontal"
  disabled="false"
  divided="false"
  id="toggle-button"
  mandatory="force"
  modelvalue="0"
  multiple="false"
  selectedclass="toggle-button--selected"
  tag="div"
  tile="false"
  variant="elevated"
>
  
  <v-btn-stub
    block="false"
    border="false"
    class="rounded toggle-button flex-grow-1"
    data-v-0938e747=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    icon="false"
    loading="false"
    model-value="0"
    replace="false"
    ripple="false"
    size="small"
    slim="false"
    stacked="false"
    symbol="Symbol(vuetify:v-btn-toggle)"
    tag="button"
    tile="false"
    variant="elevated"
    width="auto"
  >
    <v-icon-stub
      data-v-0938e747=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z
    </v-icon-stub>
    <span
      class="button-text ml-1"
      data-v-0938e747=""
    >
      Account
    </span>
  </v-btn-stub>
  <v-btn-stub
    block="false"
    border="false"
    class="rounded toggle-button flex-grow-1"
    data-v-0938e747=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    icon="false"
    loading="false"
    model-value="1"
    replace="false"
    ripple="false"
    size="small"
    slim="false"
    stacked="false"
    symbol="Symbol(vuetify:v-btn-toggle)"
    tag="button"
    tile="false"
    variant="elevated"
    width="auto"
  >
    <v-icon-stub
      data-v-0938e747=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z
    </v-icon-stub>
    <span
      class="button-text ml-1"
      data-v-0938e747=""
    >
      Account Group
    </span>
  </v-btn-stub>
  
</v-btn-toggle-stub>
`;

exports[`EvoconVToggleButton > renders correctly in compact version 1`] = `
<v-btn-toggle-stub
  border="false"
  class="ml-auto rounded button-toggle bg-quaternary-dark"
  color="primary"
  data-v-0938e747=""
  density="compact"
  direction="horizontal"
  disabled="false"
  divided="false"
  id="toggle-button"
  mandatory="force"
  modelvalue="0"
  multiple="false"
  selectedclass="toggle-button--selected"
  tag="div"
  tile="false"
  variant="elevated"
>
  
  <v-btn-stub
    block="false"
    border="false"
    class="rounded toggle-button flex-grow-1 px-2"
    data-v-0938e747=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    icon="true"
    loading="false"
    model-value="0"
    replace="false"
    ripple="false"
    size="small"
    slim="false"
    stacked="false"
    symbol="Symbol(vuetify:v-btn-toggle)"
    tag="button"
    tile="false"
    variant="elevated"
    width="32px"
  >
    <v-icon-stub
      data-v-0938e747=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,4A4,4 0 0,1 16,8A4,4 0 0,1 12,12A4,4 0 0,1 8,8A4,4 0 0,1 12,4M12,14C16.42,14 20,15.79 20,18V20H4V18C4,15.79 7.58,14 12,14Z
    </v-icon-stub>
    <!--v-if-->
  </v-btn-stub>
  <v-btn-stub
    block="false"
    border="false"
    class="rounded toggle-button flex-grow-1 px-2"
    data-v-0938e747=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    icon="true"
    loading="false"
    model-value="1"
    replace="false"
    ripple="false"
    size="small"
    slim="false"
    stacked="false"
    symbol="Symbol(vuetify:v-btn-toggle)"
    tag="button"
    tile="false"
    variant="elevated"
    width="32px"
  >
    <v-icon-stub
      data-v-0938e747=""
      disabled="false"
      end="false"
      size="16"
      start="false"
      tag="i"
    >
      M12,5.5A3.5,3.5 0 0,1 15.5,9A3.5,3.5 0 0,1 12,12.5A3.5,3.5 0 0,1 8.5,9A3.5,3.5 0 0,1 12,5.5M5,8C5.56,8 6.08,8.15 6.53,8.42C6.38,9.85 6.8,11.27 7.66,12.38C7.16,13.34 6.16,14 5,14A3,3 0 0,1 2,11A3,3 0 0,1 5,8M19,8A3,3 0 0,1 22,11A3,3 0 0,1 19,14C17.84,14 16.84,13.34 16.34,12.38C17.2,11.27 17.62,9.85 17.47,8.42C17.92,8.15 18.44,8 19,8M5.5,18.25C5.5,16.18 8.41,14.5 12,14.5C15.59,14.5 18.5,16.18 18.5,18.25V20H5.5V18.25M0,20V18.5C0,17.11 1.89,15.94 4.45,15.6C3.86,16.28 3.5,17.22 3.5,18.25V20H0M24,20H20.5V18.25C20.5,17.22 20.14,16.28 19.55,15.6C22.11,15.94 24,17.11 24,18.5V20Z
    </v-icon-stub>
    <!--v-if-->
  </v-btn-stub>
  
</v-btn-toggle-stub>
`;
